--- a/Samples/Samples/Views/PhotoView.xaml
+++ b/Samples/Samples/Views/PhotoView.xaml
@@ -1,6 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-					   xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-					   x:Class="Samples.Views.PhotoView">
-	<Label Text="{Binding MainText}" VerticalOptions="Center" HorizontalOptions="Center" />
+                       xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+                       x:Class="Samples.Views.PhotoView">
+    <StackLayout>
+        <Button Text="Photo From Camera" Command="{Binding FromCamera}" />
+        <Button Text="Photo From Gallery" Command="{Binding FromGallery}" />
+        <Button Text="Choose" Command="{Binding Choice}" />
+        
+        <Image Source="{Binding ImagePage}" />
+    </StackLayout>
 </ContentPage>
