* Remove shared project for user dialogs.  It was unnecessary. * Adding multiline entry for prompt dialog * Adding converters

--- a/Acr.XamForms.SignaturePad/Views/SignaturePadPage.xaml
+++ b/Acr.XamForms.SignaturePad/Views/SignaturePadPage.xaml
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-			 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:Acr.XamForms.SignaturePad.Views;assembly=Acr.XamForms.SignaturePad"
-			 x:Class="Acr.XamForms.SignaturePad.Views.SignaturePadPage">
+             x:Class="Acr.XamForms.SignaturePad.Views.SignaturePadPage">
     <StackLayout>
-        <local:SignaturePad />
+        <local:SignaturePad ClearTextColor="{Binding ClearTextColor}" ClearText="{Binding ClearText}" SignatureLineColor="{Binding SignatureLineColor}" />
         <StackLayout Orientation="Horizontal">
             <Button Text="{Binding CancelText}" Command="{Binding Cancel}" />
             <Button Text="{Binding SaveText}" Command="{Binding Save}" />
