--- a/Samples/Samples/Views/SettingsView.xaml
+++ b/Samples/Samples/Views/SettingsView.xaml
@@ -1,17 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:acr="clr-namespace:Acr.XamForms.Converters"
+             xmlns:acr="clr-namespace:Acr.XamForms.Converters;assembly=Acr.XamForms"
              x:Class="Samples.Views.SettingsView">
     <ContentPage.Resources>
-        <acr:InverseBoolConverter x:Key="Not" />
+        <ResourceDictionary>
+            <acr:InverseBoolConverter x:Key="Not" />
+        </ResourceDictionary>
     </ContentPage.Resources>
 
     <StackLayout>
         <Button Command="{Binding Add}" Text="Add Item" />
         <Button Command="{Binding Clear}" Text="Clear Settings" />
-
-        <ListView HorizontalAlignment="Stretch" HorizontalContentAlignment="Stretch" IsVisible="{Binding NoData, Converter={StaticResource Not}}" ItemsSource="{Binding Settings}">
+        <Label Text="No Settings Found" IsVisible="{Binding NoData}" />
+        
+        <ListView IsVisible="{Binding NoData, Converter={StaticResource Not}}" ItemsSource="{Binding Settings}">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <ViewCell>
