--- a/Samples/Samples/Views/SignatureListView.xaml
+++ b/Samples/Samples/Views/SignatureListView.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:acr="clr-namespace:Acr.XamForms.Converters"
+             xmlns:acr="clr-namespace:Acr.XamForms.Converters;assembly=Acr.XamForms"
              x:Class="Samples.Views.SignatureListView">
     <ContentPage.Resources>
         <acr:InverseBoolConverter x:Key="Not" />
