--- a/Samples/Samples/Views/SettingsView.xaml
+++ b/Samples/Samples/Views/SettingsView.xaml
@@ -2,6 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:acr="clr-namespace:Acr.XamForms.Converters;assembly=Acr.XamForms"
+             xmlns:acrview="clr-namespace:Acr.XamForms.Views;assembly=Acr.XamForms"
              x:Class="Samples.Views.SettingsView">
     <ContentPage.Resources>
         <ResourceDictionary>
@@ -14,7 +15,7 @@
         <Button Command="{Binding Clear}" Text="Clear Settings" />
         <Label Text="No Settings Found" IsVisible="{Binding NoData}" />
         
-        <ListView IsVisible="{Binding NoData, Converter={StaticResource Not}}" ItemsSource="{Binding Settings}">
+        <acrview:ListView IsVisible="{Binding NoData, Converter={StaticResource Not}}" ItemClickCommand="{Binding Select}" ItemsSource="{Binding Settings.All}">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <ViewCell>
@@ -27,6 +28,6 @@
                     </ViewCell>
                 </DataTemplate>
             </ListView.ItemTemplate>
-        </ListView>
+        </acrview:ListView>
     </StackLayout>
 </ContentPage>
