--- a/Samples/Samples/Views/PhoneView.xaml
+++ b/Samples/Samples/Views/PhoneView.xaml
@@ -1,6 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-					   xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-					   x:Class="Samples.Views.PhoneView">
-	<Label Text="{Binding MainText}" VerticalOptions="Center" HorizontalOptions="Center" />
+                       xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+                       x:Class="Samples.Views.PhoneView">
+    <Label Text="Display Name:" />
+    <Entry Text="{Binding DisplayName}" />
+    
+    <Label Text="Phone" />
+    <Entry Text="{Binding PhoneNumber}" />
+    
+    <Button Text="Call" Command="{Binding Call}" />
 </ContentPage>
