--- a/Samples/Samples/Views/PhotoView.xaml
+++ b/Samples/Samples/Views/PhotoView.xaml
@@ -2,11 +2,13 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
                        xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                        x:Class="Samples.Views.PhotoView">
-    <StackLayout>
-        <Button Text="Photo From Camera" Command="{Binding FromCamera}" />
-        <Button Text="Photo From Gallery" Command="{Binding FromGallery}" />
-        <Button Text="Choose" Command="{Binding Choice}" />
+    <ScrollView>
+        <StackLayout>
+            <Button Text="Photo From Camera" Command="{Binding FromCamera}" />
+            <Button Text="Photo From Gallery" Command="{Binding FromGallery}" />
+            <Button Text="Choose" Command="{Binding Choice}" />
         
-        <Image Source="{Binding ImagePath}" />
-    </StackLayout>
+            <Image Source="{Binding ImagePath}" />
+        </StackLayout>
+    </ScrollView>
 </ContentPage>
