FIX: settings bug Simplify text-to-speech More sample updates

--- a/Samples/Samples/Views/MailView.xaml
+++ b/Samples/Samples/Views/MailView.xaml
@@ -1,6 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-					   xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-					   x:Class="Samples.Views.MailView">
-	<Label Text="{Binding MainText}" VerticalOptions="Center" HorizontalOptions="Center" />
+                       xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+                       x:Class="Samples.Views.MailView">
+    <StackLayout>
+        <Label Text="To" />
+        <Entry Text="{Binding To}" Keyboard="Email" />
+        
+        <Label Text="Subject" />
+        <Entry Text="{Binding Subject}" />
+        
+        <Label Text="Message" />
+        <Entry Text="{Binding Message}" />
+        
+        <Button Text="Send E-Mail" Command="{Binding Send}" />
+    </StackLayout>
 </ContentPage>
