--- a/Samples/Samples/Views/LocationView.xaml
+++ b/Samples/Samples/Views/LocationView.xaml
@@ -1,6 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-					   xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-					   x:Class="Samples.Views.LocationView">
-	<Label Text="{Binding MainText}" VerticalOptions="Center" HorizontalOptions="Center" />
+                       xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+                       x:Class="Samples.Views.LocationView">
+    <TableView Intent="Data">
+        <TableView.Root>
+            <TableRoot>
+                <TableSection>
+                    <TextCell Text="Refresh" Command="{Binding Refresh}" />
+                    <TextCell Text="Latitude" Detail="{Binding Position.Latitude}"  />
+                    <TextCell Text="Longitude" Detail="{Binding Position.Longitude}" />
+                    <TextCell Text="Altitude" Detail="{Binding Position.Altitude}" />
+                    <TextCell Text="Heading" Detail="{Binding Position.Heading}" />
+                </TableSection>
+            </TableRoot>
+        </TableView.Root>
+    </TableView>
 </ContentPage>
