--- a/Samples/Samples/Views/SmsView.xaml
+++ b/Samples/Samples/Views/SmsView.xaml
@@ -2,16 +2,16 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
                        xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                        x:Class="Samples.Views.SmsView">
-    <StackLayout>
-        <Label Text="Phone Number" />
-        <Entry Text="{Binding PhoneNumber}" />
-        
-        <Label Text="Message" />
-        <Editor Text="{Binding Message}" />
-
-        <Label Text="Character Count" />
-        <Label Text="{Binding Count}" />
-        
-        <Button Text="Send Message" Command="{Binding Send}" />
-    </StackLayout>
+    <TableView Intent="Form">
+        <TableView.Root>
+            <TableRoot>
+                <TableSection>
+                    <EntryCell Label="Phone Number" Keyboard="Telephone" Text="{Binding PhoneNumber}"  />
+                    <EntryCell Label="Message" Text="{Binding Message}" />
+                    <TextCell Text="Character Count" Detail="{Binding Count}" />
+                    <TextCell Text="Send Message" Command="{Binding Send}" />
+                </TableSection>
+            </TableRoot>
+        </TableView.Root>
+    </TableView>
 </ContentPage>
