--- a/Samples/Samples/Views/NetworkView.xaml
+++ b/Samples/Samples/Views/NetworkView.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-                       xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-                       x:Class="Samples.Views.NetworkView">
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             x:Class="Samples.Views.NetworkView"
+             Title="Network Detection">
     <StackLayout>
         <StackLayout Orientation="Horizontal">
             <Label Text="Internet Available" />
