--- a/Samples/Samples/Views/PhoneView.xaml
+++ b/Samples/Samples/Views/PhoneView.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-                       xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-                       x:Class="Samples.Views.PhoneView">
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             x:Class="Samples.Views.PhoneView"
+             Title="Phone Call">
     <StackLayout>
         <Label Text="Display Name:" />
         <Entry Text="{Binding DisplayName}" />
