--- a/Samples/Samples/Views/SmsView.xaml
+++ b/Samples/Samples/Views/SmsView.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-                       xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-                       x:Class="Samples.Views.SmsView">
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             x:Class="Samples.Views.SmsView"
+             Title="Send SMS">
     <TableView Intent="Form">
         <TableView.Root>
             <TableRoot>
