--- a/Samples/Samples/Views/TextToSpeechView.xaml
+++ b/Samples/Samples/Views/TextToSpeechView.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-                       xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-                       x:Class="Samples.Views.TextToSpeechView">
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             x:Class="Samples.Views.TextToSpeechView"
+             Title="Text-to-Speech">
     <StackLayout>
         <Label Text="Say:" />
         <Entry Text="{Binding Text}" />
