--- a/Samples/Samples/Views/UserDialogView.xaml
+++ b/Samples/Samples/Views/UserDialogView.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-                       xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-                       x:Class="Samples.Views.UserDialogView">
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             x:Class="Samples.Views.UserDialogView"
+             Title="User Dialogs">
     <ScrollView>
         <StackLayout>
             <Label Text="{Binding Result}" />
