- remove ios system settings - add shared library for default internal utils

--- a/Samples/Samples/Views/SettingsView.xaml
+++ b/Samples/Samples/Views/SettingsView.xaml
@@ -22,9 +22,9 @@
                     <DataTemplate>
                         <ViewCell>
                             <ViewCell.View>
-                                <StackLayout Orientation="Vertical">
+                                <StackLayout>
                                     <Label Text="{Binding Key}" />
-                                    <Label Text="{Binding Value}" />
+                                    <!--<Label Text="{Binding Value}" />-->
                                 </StackLayout>
                             </ViewCell.View>
                         </ViewCell>
