--- a/Samples/Samples/Views/SignatureListView.xaml
+++ b/Samples/Samples/Views/SignatureListView.xaml
@@ -2,30 +2,35 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:acr="clr-namespace:Acr.XamForms.Converters;assembly=Acr.XamForms"
-             x:Class="Samples.Views.SignatureListView"
-             Title="Signatures">
+             x:Class="Samples.Views.SignatureListView">
+    
     <ContentPage.Resources>
-        <acr:InverseBoolConverter x:Key="Not" />
-        <acr:FileSizeConverter x:Key="FileSize" />
+        <ResourceDictionary>
+            <acr:InverseBoolConverter x:Key="Not" />
+            <acr:FileSizeConverter x:Key="FileSize" />
+        </ResourceDictionary>
     </ContentPage.Resources>
-    
-    <Button Text="Create Signature" Command="{Binding Create}" />
-    <Button Text="Configuration" Command="{Binding Configure}" />
-    <Label Text="No Signatures Found" IsVisible="{Binding NoData}" />
-    
-    <ListView IsVisible="{Binding NoData, Converter={StaticResource Not}}" ItemsSource="{Binding List}">
-        <ListView.ItemTemplate>
-            <DataTemplate>
-                <ViewCell>
-                    <ViewCell.View>
-                        <StackLayout Orientation="Horizontal">
-                            <Image Source="{Binding FilePath}" WidthRequest="40" HeightRequest="40" />
-                            <Label Text="{Binding FileName}" HorizontalOptions="FillAndExpand" />
-                            <Label Text="{Binding FileSize, Converter={StaticResource FileSize}}" />
-                        </StackLayout>
-                    </ViewCell.View>
-                </ViewCell>
-            </DataTemplate>
-        </ListView.ItemTemplate>
-    </ListView>
+
+    <StackLayout>
+        <Button Text="Create Signature" Command="{Binding Create}" />
+        <Button Text="Configuration" Command="{Binding Configure}" />
+        <Label Text="No Signatures Found" IsVisible="{Binding NoData}" />
+        
+        <ListView IsVisible="{Binding NoData, Converter={StaticResource Not}}" ItemsSource="{Binding List}">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <ViewCell>
+                        <ViewCell.View>
+                            <!--<StackLayout Orientation="Horizontal">
+                                <Image Source="{Binding FilePath}" WidthRequest="40" HeightRequest="40" />
+                                <Label Text="{Binding FileName}" HorizontalOptions="FillAndExpand" />
+                                <Label Text="{Binding FileSize, Converter={StaticResource FileSize}}" />
+                            </StackLayout>-->
+                        </ViewCell.View>
+                    </ViewCell>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+
+    </StackLayout>
 </ContentPage>
