--- a/Samples/Samples/Views/SettingsView.xaml
+++ b/Samples/Samples/Views/SettingsView.xaml
@@ -16,21 +16,19 @@
         <Button Command="{Binding Clear}" Text="Clear Settings" />
         <Label Text="No Settings Found" IsVisible="{Binding NoData}" />
 
-        <StackLayout IsVisible="{Binding NoData, Converter={StaticResource Not}}">
-            <acrview:ListView ItemClickCommand="{Binding Select}" ItemsSource="{Binding Settings.All}">
-                <ListView.ItemTemplate>
-                    <DataTemplate>
-                        <ViewCell>
-                            <ViewCell.View>
-                                <StackLayout>
-                                    <Label Text="{Binding Key}" />
-                                    <!--<Label Text="{Binding Value}" />-->
-                                </StackLayout>
-                            </ViewCell.View>
-                        </ViewCell>
-                    </DataTemplate>
-                </ListView.ItemTemplate>
-            </acrview:ListView>
-        </StackLayout>
+        <acrview:ListView IsVisible="{Binding NoData, Converter={StaticResource Not}}" ItemClickCommand="{Binding Select}" ItemsSource="{Binding Settings.All}">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <ViewCell>
+                        <ViewCell.View>
+                            <StackLayout>
+                                <Label Text="{Binding Key}" />
+                                <!--<Label Text="{Binding Value}" />-->
+                            </StackLayout>
+                        </ViewCell.View>
+                    </ViewCell>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </acrview:ListView>
     </StackLayout>
 </ContentPage>
