--- a/Samples/Samples/Views/SignatureListView.xaml
+++ b/Samples/Samples/Views/SignatureListView.xaml
@@ -2,6 +2,7 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:acr="clr-namespace:Acr.XamForms.Converters;assembly=Acr.XamForms"
+             xmlns:acrview="clr-namespace:Acr.XamForms.Views;assembly=Acr.XamForms"
              x:Class="Samples.Views.SignatureListView">
     
     <ContentPage.Resources>
@@ -15,22 +16,21 @@
         <Button Text="Create Signature" Command="{Binding Create}" />
         <Button Text="Configuration" Command="{Binding Configure}" />
         <Label Text="No Signatures Found" IsVisible="{Binding NoData}" />
-        
-        <ListView IsVisible="{Binding NoData, Converter={StaticResource Not}}" ItemsSource="{Binding List}">
+
+        <acrview:ListView IsVisible="{Binding NoData, Converter={StaticResource Not}}" ItemClickCommand="{Binding Select}" ItemsSource="{Binding List}">
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <ViewCell>
                         <ViewCell.View>
-                            <!--<StackLayout Orientation="Horizontal">
+                            <StackLayout Orientation="Horizontal">
                                 <Image Source="{Binding FilePath}" WidthRequest="40" HeightRequest="40" />
                                 <Label Text="{Binding FileName}" HorizontalOptions="FillAndExpand" />
                                 <Label Text="{Binding FileSize, Converter={StaticResource FileSize}}" />
-                            </StackLayout>-->
+                            </StackLayout>
                         </ViewCell.View>
                     </ViewCell>
                 </DataTemplate>
             </ListView.ItemTemplate>
-        </ListView>
-
+        </acrview:ListView>
     </StackLayout>
 </ContentPage>
