Signature Pad ready to go

--- a/Samples/Samples/Views/SignatureXamlView.xaml
+++ b/Samples/Samples/Views/SignatureXamlView.xaml
@@ -1,23 +1,29 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
-			 xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:acr="clr-namespace:Acr.XamForms.SignaturePad;assembly=Acr.XamForms.SignaturePad"
-			 x:Class="Samples.Views.SignatureXamlView"
+             x:Class="Samples.Views.SignatureXamlView" 
              Title="XAML Signature Pad">
-    <StackLayout>
-	    <acr:SignaturePadView
-            HorizontalOptions="FillAndExpand"
-            VerticalOptions="FillAndExpand"
+    <ScrollView>
+        <StackLayout>
+            <acr:SignaturePadView
+                x:Name="padView"
+                HeightRequest="320"
+                WidthRequest="240"
             
-            CaptionText="Caption This"
-            CaptionTextColor="Black"
-            ClearText="Clear Me!"
-            ClearTextColor="Red"
-            PromptText="Prompt Here"
-            PromptTextColor="Red"
-            SignatureLineColor="Aqua"
-            StrokeColor="Black"
-            StrokeWidth="2"
-        />
-    </StackLayout>
+                BackgroundColor="White"
+                CaptionText="Caption This"
+                CaptionTextColor="Black"
+                ClearText="Clear Me!"
+                ClearTextColor="Red"
+                PromptText="Prompt Here"
+                PromptTextColor="Red"
+                SignatureLineColor="Aqua"
+                StrokeColor="Black"
+                StrokeWidth="2"
+            />
+            
+            <Button Clicked="OnChangeTheme" Text="Change Theme" />
+        </StackLayout>
+    </ScrollView>
 </ContentPage>
