--- a/Samples/Samples/Views/SignatureListView.xaml
+++ b/Samples/Samples/Views/SignatureListView.xaml
@@ -3,7 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:acr="clr-namespace:Acr.XamForms.Converters;assembly=Acr.XamForms"
              xmlns:acrview="clr-namespace:Acr.XamForms.Views;assembly=Acr.XamForms"
-             x:Class="Samples.Views.SignatureListView">
+             x:Class="Samples.Views.SignatureListView"
+             Title="Signature Pad">
     
     <ContentPage.Resources>
         <ResourceDictionary>
