Mass update to xf 1.2.1.6229 Rewrite of wp8 components using wp toolkit Prepping user dialogs 2.0 for release

--- a/Samples/Samples/Views/UserDialogView.xaml
+++ b/Samples/Samples/Views/UserDialogView.xaml
@@ -12,10 +12,10 @@
                 <Button Text="Action Sheet" Command="{Binding ActionSheet}" />
                 <Button Text="Alert" Command="{Binding Alert}" />
                 <Button Text="Confirm" Command="{Binding Confirm}" />
-                <Button Text="Date Prompt" Command="{Binding DatePrompt}" />
+                <!--<Button Text="Date Prompt" Command="{Binding DatePrompt}" />
                 <Button Text="Time Prompt" Command="{Binding TimePrompt}" />
                 <Button Text="Date/Time Prompt" Command="{Binding DateTimePrompt}" />
-                <Button Text="Duration Prompt" Command="{Binding DurationPrompt}" />
+                <Button Text="Duration Prompt" Command="{Binding DurationPrompt}" />-->
                 <Button Text="Prompt" Command="{Binding Prompt}" />
                 <Button Text="Prompt (Secure)" Command="{Binding PromptSecure}" />
                 <Button Text="Toast" Command="{Binding Toast}" />
