- Many additions to file system services - New autofac library - New validation property model - Moving network model into separate namespace and prepping update

--- a/Samples/Samples/Views/SettingsView.xaml
+++ b/Samples/Samples/Views/SettingsView.xaml
@@ -19,14 +19,7 @@
         <acrview:ListView IsVisible="{Binding NoData, Converter={StaticResource Not}}" ItemClickCommand="{Binding Select}" ItemsSource="{Binding Settings.All}">
             <ListView.ItemTemplate>
                 <DataTemplate>
-                    <ViewCell>
-                        <ViewCell.View>
-                            <StackLayout>
-                                <Label Text="{Binding Key}" />
-                                <!--<Label Text="{Binding Value}" />-->
-                            </StackLayout>
-                        </ViewCell.View>
-                    </ViewCell>
+                    <TextCell Text="{Binding Key}" Detail="{Binding Value}" />
                 </DataTemplate>
             </ListView.ItemTemplate>
         </acrview:ListView>
